[project]
name = "catch_and_kill"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    {name = "Miles Smith", email = "miles-smith@omrf.org"},
]
dependencies = [
    "typer>=0.12.3",
    "rich>=13.7.1",
    "tqdm>=4.66.4",
    "polars>=0.20.31",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "GPL-3.0"}

[project.scripts]
cak = "catch_and_kill:catch_and_kill"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.4.8",
    "mypy>=1.10.0",
]
